--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.purple-text-gradient {
+  background: linear-gradient(to right, #8000ff 20%, #e100ff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 @layer base {
   html {
     @apply scroll-smooth;
@@ -16,53 +24,53 @@
 
 @layer base {
   :root {
-    --background: 0 0% 94.1%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 250 80% 63%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 252 90% 70%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 250 80% 63%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-  }
- 
-  .dark {
-    --background: 250 10% 10%;
+    --background: 260 80% 4%;
     --foreground: 0 0% 98%;
-    --card: 250 10% 12%;
+    --card: 256 75% 8%;
     --card-foreground: 0 0% 98%;
-    --popover: 250 10% 10%;
+    --popover: 260 80% 4%;
     --popover-foreground: 0 0% 98%;
-    --primary: 250 80% 63%;
+    --primary: 258 95% 68%;
     --primary-foreground: 0 0% 98%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
-    --accent: 252 90% 70%;
+    --accent: 258 95% 68%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
+    --border: 258 95% 40%;
     --input: 240 3.7% 15.9%;
-    --ring: 250 80% 63%;
+    --ring: 258 95% 68%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+    --radius: 0.5rem;
+  }
+ 
+  .dark {
+    --background: 260 80% 4%;
+    --foreground: 0 0% 98%;
+    --card: 256 75% 8%;
+    --card-foreground: 0 0% 98%;
+    --popover: 260 80% 4%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 258 95% 68%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 258 95% 68%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 258 95% 40%;
+    --input: 240 3.7% 15.9%;
+    --ring: 258 95% 68%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
